<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Black"
        android:elevation="4dp"
        android:paddingTop="1dp"
        android:translationZ="4dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/menu_air"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_air" />
                <TextView
                    android:id="@+id/text_air"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air"
                    android:textColor="@color/Grey_6"
                    android:textSize="12sp"
                    android:tag="air" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_hotel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_hotel" />
                <TextView
                    android:id="@+id/text_hotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel"
                    android:textColor="@color/Grey_6"
                    android:textSize="12sp"
                    android:tag="hotel" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_location" />
                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/Grey_6"
                    android:textSize="12sp"
                    android:tag="location" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_bell"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_bell" />
                <TextView
                    android:id="@+id/text_bell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bell"
                    android:textColor="@color/Grey_6"
                    android:textSize="12sp"
                    android:tag="bell" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_person"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_person" />
                <TextView
                    android:id="@+id/text_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person"
                    android:textColor="@color/Grey_6"
                    android:textSize="12sp"
                    android:tag="person" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Grey_1" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>