<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:text="@string/air_tickets_title"
            android:textColor="@color/Grey_6"
            android:textSize="36sp" />

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_1"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_background_16px_grey_2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_background_16px_grey_4"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:shadowColor="@color/Shadow"
                android:shadowDx="0"
                android:shadowDy="4"
                android:shadowRadius="4"
                android:translationZ="4dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_search" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_text_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/Grey_4"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:gravity="start"
                        android:hint="@string/from"
                        android:layout_marginEnd="15dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/White"
                        android:textColorHint="@color/Grey_6"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"

                        android:layout_marginEnd="15dp"
                        android:background="@color/Grey_5" />

                    <EditText
                        android:id="@+id/edit_text_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/Grey_4"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:gravity="start"
                        android:hint="@string/to"
                        android:layout_marginEnd="15dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="15dp"
                        android:textColor="@color/White"
                        android:textColorHint="@color/Grey_6"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="start"
            android:text="@string/air_tickets_text_2"
            android:textColor="@color/Grey_6"
            android:textSize="36sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <LinearLayout
            android:id="@+id/LinearLayout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler_view"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_background_8px_grey_4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regularitalic"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/air_tickets_text_3"
                android:textColor="@color/Grey_6"
                android:textSize="28sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout_2"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="start"
            android:text="@string/air_tickets_text_4"
            android:textColor="@color/Grey_3"
            android:textSize="36sp" />

    </RelativeLayout>

</ScrollView>
